--- a/style.css
+++ b/style.css
@@ -90,12 +90,7 @@ img {
     padding-left:30px;
 }
 
-.large-grid .project-teaser {
-    width:30.5%;
-    float:left;
-    margin:1.2%;
-    margin-bottom: -30px;
-}
+.large-grid .project-teaser {width: 21.8%;float: left;margin: 1.6%;margin-bottom: -25px;}
 
 /*.large-grid .project-teaser:nth-of-type(5n+0){
     margin-right:0;
@@ -120,7 +115,7 @@ img {
 
 .large-grid .project-teaser img {
     width: 100%;
-    height: 327px;
+    height: 31vh !important;
     object-fit: cover;
 }
 
@@ -876,46 +871,63 @@ body.page-template-page-portfolio {
 }
 
 .award-teaser {
-    width: 400px;
-    height: 100%;
-    display: inline-block;
+    width: 21.8%;
+    float: left;
+    margin: 1.6%;
+    margin-bottom: 25px;
     text-align: center;
-    vertical-align: top;
-    margin-bottom:12px;
-    margin-left: 2.6vw;
-    margin-right: 0.15vw;
-}
-
-
-@media only screen
-and (max-width : 1281px){
-
-.award-teaser {
-    height: 100%;
-    display: inline-block;
-    text-align: center;
-    vertical-align: top;
-    margin-bottom: 12px;
-    margin-left: 2.5vw;
-    margin-right: 0.15vw;
-    width: 29.5vw;
-}
-.award-teaser-image {
-    width: 375px !important;
-}
-
 }
 
 @media only screen
-and (max-width : 1024px){
-    .award-teaser {
-        width: 80vw;
+and (max-width: 3000px) and (min-width: 1281px){
+    .award-teaser:nth-child(4n+1){
+        clear:left;
     }
-    .award-teaser-image {
-        width: 80vw !important;
+}
+
+
+@media only screen
+and (max-width : 1281px) and (min-width: 1025px){
+    .award-teaser:nth-child(3n+1){
+        clear:left;
+    }
+    .award-teaser {
+        width: 29.3%;
+        float: left;
+        margin: 2%;
+        margin-bottom: 0px;
+    }
+}
+
+@media only screen
+and (max-width : 1024px) and (min-width: 681px){
+    .award-teaser:nth-child(2n+1){
+        clear:left;
+    }
+    .award-teaser {
+        width: 45%;
+        float: left;
+        margin: 2.5%;
+        margin-bottom: 0px;
     }
     .page-template-page-awardspress .page-content.large-master-type {
         text-align: center;
+    }
+}
+@media only screen
+and (max-width : 680px) and (min-width: 10px){
+    .award-teaser {
+        width: 100%;
+        float: left;
+        margin: 0%;
+        margin-bottom: 25px;
+    }
+    .page-template-page-awardspress .page-content.large-master-type {
+        text-align: center;
+    }
+    .award-teaser-image {
+        width: 100%;
+        height: 50%;
     }
 }
 
@@ -926,11 +938,10 @@ and (max-width : 1024px){
     margin-bottom: 10px;
     width: 100%;
     color: #7B8080;
-    margin-left: 1vw;
 }
 
 .award-teaser-image {
-    width: 430px;
+    width: 100%;
     height: 315px;
     object-fit: cover;
     margin-bottom: 8px;
@@ -1163,4 +1174,41 @@ and (max-width : 800px){
     .fa {
         font-size:20px;
     }
+}
+
+.news-date {
+    font-size: 18px;
+    color: #7B8080;
+    font-family: "Segoe UI Light";
+    text-align: left;
+    margin-bottom: 0px;
+}
+.news-title {
+    font-size: 18px;
+    color: #7B8080;
+    font-family: "Segoe UI";
+    text-align: left;
+    margin-bottom: 15px;
+}
+.news-description {
+    font-size: 20px;
+    color: #7B8080;
+    font-family: "Segoe UI Light";
+    text-align: left;
+    line-height: 22px;
+}
+
+.grid-padding {
+    padding-left:25px;
+    padding-right:25px;
+}
+
+@media only screen
+and (max-width : 800px){
+
+    .grid-padding {
+        padding-left:0px;
+        padding-right:0px;
+    }
+
 }
